tests/ui/struct_update.stderr
error: struct update syntax is not supported by the query_args macro
 --> tests/ui/struct_update.rs:7:13
  |
7 |             ..Args {
  |             ^^
